chore: spring boot, some db drivers and other dependencies